src-tauri/check_output.txt
warning: FontCluster v0.1.2 (/Users/mugisus/Documents/GitHub/fontcluster/src-tauri) ignoring invalid dependency `umap` which is missing a lib target
    Checking FontCluster v0.1.2 (/Users/mugisus/Documents/GitHub/fontcluster/src-tauri)
error[E0432]: unresolved import `umap`
 --> src/core/mapper.rs:6:5
  |
6 | use umap::Umap;
  |     ^^^^ use of unresolved module or unlinked crate `umap`
  |
  = help: if you wanted to use a crate named `umap`, use `cargo add umap` to add it to your `Cargo.toml`

error[E0277]: `ImageConfig` doesn't implement `Debug`
  --> src/config/mod.rs:26:5
   |
23 | #[derive(Debug, Clone, Serialize, Deserialize, Default)]
   |          ----- in this derive macro expansion
...
26 |     pub image: Option<ImageConfig>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ImageConfig` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `ImageConfig`
   = note: add `#[derive(Debug)]` to `ImageConfig` or manually `impl Debug for ImageConfig`
   = help: the trait `Debug` is implemented for `std::option::Option<T>`
help: consider annotating `ImageConfig` with `#[derive(Debug)]`
   |
88 + #[derive(Debug)]
89 | pub struct ImageConfig {
   |

error[E0277]: the trait bound `ImageConfig: Clone` is not satisfied
  --> src/config/mod.rs:26:5
   |
23 | #[derive(Debug, Clone, Serialize, Deserialize, Default)]
   |                 ----- in this derive macro expansion
...
26 |     pub image: Option<ImageConfig>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `ImageConfig`
   |
   = note: required for `std::option::Option<ImageConfig>` to implement `Clone`
help: consider annotating `ImageConfig` with `#[derive(Clone)]`
   |
88 + #[derive(Clone)]
89 | pub struct ImageConfig {
   |

error[E0277]: the trait bound `ImageConfig: serde::Serialize` is not satisfied
    --> src/config/mod.rs:23:24
     |
23   | #[derive(Debug, Clone, Serialize, Deserialize, Default)]
     |                        ^^^^^^^^^ the trait `Serialize` is not implemented for `ImageConfig`
...
26   |     pub image: Option<ImageConfig>,
     |     --- required by a bound introduced by this call
     |
     = note: for local types consider adding `#[derive(serde::Serialize)]` to your `ImageConfig` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Serialize`:
               &'a T
               &'a mut T
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
               (T0, T1, T2, T3, T4)
             and 729 others
     = note: required for `std::option::Option<ImageConfig>` to implement `Serialize`
note: required by a bound in `config::_::_serde::ser::SerializeStruct::serialize_field`
    --> /Users/mugisus/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/ser/mod.rs:1917:21
     |
1915 |     fn serialize_field<T>(&mut self, key: &'static str, value: &T) -> Result<(), Self::Error>
     |        --------------- required by a bound in this associated function
1916 |     where
1917 |         T: ?Sized + Serialize;
     |                     ^^^^^^^^^ required by this bound in `SerializeStruct::serialize_field`
     = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ImageConfig: serde::Deserialize<'de>` is not satisfied
    --> src/config/mod.rs:26:16
     |
26   |     pub image: Option<ImageConfig>,
     |                ^^^^^^^^^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `ImageConfig`
     |
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `ImageConfig` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Deserialize<'de>`:
               `&'a [u8]` implements `Deserialize<'de>`
               `&'a serde_bytes::bytearray::ByteArray<N>` implements `Deserialize<'de>`
               `&'a serde_bytes::bytes::Bytes` implements `Deserialize<'de>`
               `&'a serde_json::value::RawValue` implements `Deserialize<'de>`
               `&'a std::path::Path` implements `Deserialize<'de>`
               `&'a str` implements `Deserialize<'de>`
               `&'p jsonptr::pointer::Pointer` implements `Deserialize<'de>`
               `()` implements `Deserialize<'de>`
             and 748 others
     = note: required for `std::option::Option<ImageConfig>` to implement `Deserialize<'_>`
note: required by a bound in `next_element`
    --> /Users/mugisus/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/de/mod.rs:1771:12
     |
1769 |     fn next_element<T>(&mut self) -> Result<Option<T>, Self::Error>
     |        ------------ required by a bound in this associated function
1770 |     where
1771 |         T: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `SeqAccess::next_element`

error[E0277]: the trait bound `ImageConfig: serde::Deserialize<'de>` is not satisfied
    --> src/config/mod.rs:26:16
     |
26   |     pub image: Option<ImageConfig>,
     |                ^^^^^^^^^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `ImageConfig`
     |
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `ImageConfig` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Deserialize<'de>`:
               `&'a [u8]` implements `Deserialize<'de>`
               `&'a serde_bytes::bytearray::ByteArray<N>` implements `Deserialize<'de>`
               `&'a serde_bytes::bytes::Bytes` implements `Deserialize<'de>`
               `&'a serde_json::value::RawValue` implements `Deserialize<'de>`
               `&'a std::path::Path` implements `Deserialize<'de>`
               `&'a str` implements `Deserialize<'de>`
               `&'p jsonptr::pointer::Pointer` implements `Deserialize<'de>`
               `()` implements `Deserialize<'de>`
             and 748 others
     = note: required for `std::option::Option<ImageConfig>` to implement `Deserialize<'_>`
note: required by a bound in `next_value`
    --> /Users/mugisus/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/de/mod.rs:1916:12
     |
1914 |     fn next_value<V>(&mut self) -> Result<V, Self::Error>
     |        ---------- required by a bound in this associated function
1915 |     where
1916 |         V: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `MapAccess::next_value`

Some errors have detailed explanations: E0277, E0432.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `FontCluster` (lib) due to 6 previous errors
